Fix form margins on mobile #2142

--- a/src/html-pages/search-results-page/_index.scss
+++ b/src/html-pages/search-results-page/_index.scss
@@ -22,20 +22,9 @@ $_clear-button-inline-size: 48px;
   margin-bottom: 0;
 }
 
-.search-form {
-  margin-left: functions.px-to-rem($_inline-margin);
-  margin-right: functions.px-to-rem($_inline-margin);
-  margin-bottom: baseline.increments(3);
-
-  @include breakpoints.not-narrow {
-    margin-left: 0;
-    margin-right: 0;
-  }
-}
-
 .search-form__form {
   @include form.form();
-  margin-bottom: $_search-form-vertical-spacing;
+  margin-bottom: baseline.increments(6);
 }
 
 .search-form__section {
